Fixed background alpha color. (It was too dark).

--- a/433mhz/server/www/css/dashboard-style.css
+++ b/433mhz/server/www/css/dashboard-style.css
@@ -8,8 +8,8 @@ html {
 body{
   /*background-image: url(../assets/img/background-repeat-pattern.png);*/
 	background: linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.7)
+      rgba(0, 0, 0, 0.1), 
+      rgba(0, 0, 0, 0.1)
     ), url(../assets/img/background-repeat-pattern.png);
 	height: 100%;
 }
